--- a/SemniarPI/Properties/Resources.resx
+++ b/SemniarPI/Properties/Resources.resx
@@ -121,10 +121,10 @@
   <data name="PIdb" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\PIdb.db;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="searching" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\bin\Debug\searching.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="PIexport" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\PIexport.sql;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  </data>
+  <data name="searching" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\searching.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
